<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">camera</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_shot">拍照</string>
    <string name="action_view">瀏覽</string>
	<string name="action_edit">編輯</string>
	<string name="action_texture">Texture</string>
    <string name="action_close">Close</string>
    <string name="action_save">Save</string>
    <string name="action_undo">Undo</string>
    <string name="action_clean">Clean</string>
</resources>
