<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.test.drawable.DrawActivity" >

<!--  
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
-->
    
    <item android:id="@+id/action_close"
        android:title="@string/action_close"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_undo"
        android:title="@string/action_undo"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_clean"
        android:title="@string/action_clean"
        android:icon="@android:drawable/ic_input_delete"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"/>
    
    <item android:title="@string/action_texture"
	android:showAsAction="always"
	android:orderInCategory="3"
	android:icon="@android:drawable/ic_menu_gallery"
	android:id="@+id/action_texture"/>

</menu>
